--- a/site/index.html
+++ b/site/index.html
@@ -33,7 +33,7 @@
     <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -42,11 +42,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Mapping Hub Home</a>
+                <a class="navbar-brand" href="#">Mapping Hub</a>
             </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="/">Home</a></li>
+                    <li><a href="https://github.com/mappinghub/elements">Elements</a></li>
+                    <li><a href="https://github.com/mappinghub/mappings">Mappings</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
         </div>
+        <a class="github-fork-ribbon" href="http://github.com/mappinghub/" title="Find us on GitHub">Find us on GitHub</a>
     </nav>
-    <a class="github-fork-ribbon" href="http://github.com/mappinghub/" title="Find us on GitHub">Fork me on GitHub</a>
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="container">
