--- a/site/index.html
+++ b/site/index.html
@@ -2,108 +2,109 @@
 <html class="no-js">
 
 <head>
-    <meta content="text/html;charset=UTF-8" http-equiv="Content-Type">
-    <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-    <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-    <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-    <!--[if gt IE 8]><!-->
-    <!--<![endif]-->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Mapping Hub</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-    body {
-        padding-top: 50px;
-        padding-bottom: 20px;
-    }
-    </style>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs-3.3.7/jq-2.2.4/dt-1.10.13/cr-1.3.2/datatables.min.css">
-    <link rel="stylesheet" href="css/ghfork.css">
-    <!--[if lt IE 9]>
+  <meta content="text/html;charset=UTF-8" http-equiv="Content-Type">
+  <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+  <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+  <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+  <!--[if gt IE 8]><!-->
+  <!--<![endif]-->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>Mapping Hub</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+  body {
+    padding-top: 50px;
+    padding-bottom: 20px;
+  }
+  </style>
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs-3.3.7/jq-2.2.4/dt-1.10.13/cr-1.3.2/datatables.min.css">
+  <link rel="stylesheet" href="css/ghfork.css">
+  <!--[if lt IE 9]>
             <link rel="stylesheet" href="css/ghfork-ie.css" />
         <![endif]-->
-    <script type="text/javascript" src="https://cdn.datatables.net/v/bs-3.3.7/jq-2.2.4/dt-1.10.13/cr-1.3.2/datatables.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="https://cdn.datatables.net/v/bs-3.3.7/jq-2.2.4/dt-1.10.13/cr-1.3.2/datatables.min.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 </head>
 
 <body>
-    <!--[if lt IE 8]>
+  <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Mapping Hub</a>
-            </div>
-            <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="/">Home</a></li>
-                    <li><a href="https://github.com/mappinghub/elements">Elements</a></li>
-                    <li><a href="https://github.com/mappinghub/mappings">Mappings</a></li>
-                </ul>
-            </div><!--/.nav-collapse -->
-        </div>
-        <a class="github-fork-ribbon" href="http://github.com/mappinghub/" title="Find us on GitHub">Find us on GitHub</a>
-    </nav>
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-        <div class="container">
-            <h1>Mapping Hub</h1>
-            <p>This site provides a convenient way to navigate data type definitions and mappings (translators) between different data formats primarilly of use in healthcare.</p>
-            <ul class="nav nav-tabs" id="tableTabs">
-                <li class="active"><a href="#elements">Elements</a></li>
-                <li><a href="#mappings">Mappings</a></li>
-            </ul>
-            <div class="tab-content">
-                <div class="tab-pane active" id="elements">
-                    <table role="grid" class="table table-striped table-bordered dataTable no-footer" id="elements-table"></table>
-                </div>
-                <div class="tab-pane" id="mappings">
-                    <table role="grid" class="table table-striped table-bordered dataTable no-footer" id="mappings-table"></table>
-                </div>
-            </div>
-        </div>
-    </div>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <h2>Elements</h2>
-                <p>The Elements repository contains descriptions of source, target and/or intermediate data elements used by mappings or translations.
-                    <br>
-                </p>
-                <p><a class="btn btn-default" href="https://www.github.com/mappinghub/elements" role="button">Visit Repo »</a></p>
-            </div>
-            <div class="col-md-4">
-                <h2>Mappings</h2>
-                <p>The Mappings repository contains descriptions of mappings (a/k/a translations) that are used to convert source data formats, data models and/or vocabularies to target data formats, data models and/or vocabularies.
-                    <br>
-                </p>
-                <p><a class="btn btn-default" href="http://www.github.com/mappinghub/mappings" role="button">Visit Repo »</a></p>
-            </div>
-            <div class="col-md-4">
-                <h2>Views</h2>
-                <p>The Views repository contains definitions of various auto-generated views of mappings and elements.
-                    <br>
-                </p>
-                <p><a class="btn btn-default" href="https://www.github.com/mappinghub/views" role="button">Visit Repo »</a></p>
-            </div>
-        </div>
-        <hr>
-        <footer>
-            <p>© MappingHub.org 2017</p>
-        </footer>
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Mapping Hub</a>
+      </div>
+      <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="/">Home</a></li>
+          <li><a href="https://github.com/mappinghub/elements">Elements</a></li>
+          <li><a href="https://github.com/mappinghub/mappings">Mappings</a></li>
+        </ul>
+      </div>
+      <!--/.nav-collapse -->
     </div>
-    <!-- /container -->
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.
+    <a class="github-fork-ribbon" href="http://github.com/mappinghub/" title="Find us on GitHub">Find us on GitHub</a>
+  </nav>
+  <!-- Main jumbotron for a primary marketing message or call to action -->
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Mapping Hub</h1>
+      <p>This site provides a convenient way to navigate data type definitions and mappings (translators) between different data formats primarilly of use in healthcare.</p>
+      <ul class="nav nav-tabs" id="tableTabs">
+        <li class="active"><a href="#elements">Elements</a></li>
+        <li><a href="#mappings">Mappings</a></li>
+      </ul>
+      <div class="tab-content">
+        <div class="tab-pane active" id="elements">
+          <table role="grid" class="table table-striped table-bordered dataTable no-footer" id="elements-table"></table>
+        </div>
+        <div class="tab-pane" id="mappings">
+          <table role="grid" class="table table-striped table-bordered dataTable no-footer" id="mappings-table"></table>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h2>Elements</h2>
+        <p>The Elements repository contains descriptions of source, target and/or intermediate data elements used by mappings or translations.
+          <br>
+        </p>
+        <p><a class="btn btn-default" href="https://www.github.com/mappinghub/elements" role="button">Visit Repo »</a></p>
+      </div>
+      <div class="col-md-4">
+        <h2>Mappings</h2>
+        <p>The Mappings repository contains descriptions of mappings (a/k/a translations) that are used to convert source data formats, data models and/or vocabularies to target data formats, data models and/or vocabularies.
+          <br>
+        </p>
+        <p><a class="btn btn-default" href="http://www.github.com/mappinghub/mappings" role="button">Visit Repo »</a></p>
+      </div>
+      <div class="col-md-4">
+        <h2>Views</h2>
+        <p>The Views repository contains definitions of various auto-generated views of mappings and elements.
+          <br>
+        </p>
+        <p><a class="btn btn-default" href="https://www.github.com/mappinghub/views" role="button">Visit Repo »</a></p>
+      </div>
+    </div>
+    <hr>
+    <footer>
+      <p>© MappingHub.org 2017</p>
+    </footer>
+  </div>
+  <!-- /container -->
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
@@ -113,6 +114,24 @@
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
         </script>
   -->
+  <div class="modal fade" id="getCodeModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel"> Detail View </h4>
+        </div>
+        <div class="modal-body" style="overflow-x: scroll;">
+          <pre id="getCode">
+            <!--ajax success content here.-->
+          </pre>
+        </div>
+        <div class="modal-footer">
+          <a href="#" class="btn btn-primary center-block" data-dismiss="modal">Close</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
