Adding build number to package and index.html

--- a/site/index.html
+++ b/site/index.html
@@ -100,7 +100,7 @@
     </div>
     <hr>
     <footer>
-      <p>© MappingHub.org 2017</p>
+      <p>© MappingHub.org 2017 - build $BUILDNUMBER</p>
     </footer>
   </div>
   <!-- /container -->
