adding build status icon

--- a/site/index.html
+++ b/site/index.html
@@ -58,7 +58,10 @@
   <!-- Main jumbotron for a primary marketing message or call to action -->
   <div class="jumbotron">
     <div class="container">
-      <h1>Mapping Hub</h1>
+      <div class="title">
+        <img src="https://travis-ci.org/mappinghub/views.svg?branch=master"></img>
+        <h1>Mapping Hub</h1> 
+      </div>
       <p>This site provides a convenient way to navigate data type definitions and mappings (translators) between different data formats primarilly of use in healthcare.</p>
       <ul class="nav nav-tabs" id="tableTabs">
         <li class="active"><a href="#elements">Elements</a></li>
