--- a/site/index.html
+++ b/site/index.html
@@ -59,7 +59,7 @@
   <div class="jumbotron">
     <div class="container">
       <div class="title">
-        <img src="https://travis-ci.org/mappinghub/views.svg?branch=master"></img>
+        <a href="http://github.com/mappinghub/views/"><img src="https://travis-ci.org/mappinghub/views.svg?branch=master"></img></a>
         <h1>Mapping Hub</h1> 
       </div>
       <p>This site provides a convenient way to navigate data type definitions and mappings (translators) between different data formats primarilly of use in healthcare.</p>
