Updated home page

--- a/site/index.html
+++ b/site/index.html
@@ -62,7 +62,7 @@
         <a href="http://github.com/mappinghub/views/"><img src="https://travis-ci.org/mappinghub/views.svg?branch=master"></img></a>
         <h1>Mapping Hub</h1>
       </div>
-      <p>This site provides a convenient way to navigate data type definitions and mappings (translators) between different data formats primarilly of use in healthcare.</p>
+      <p>This is an experimental pre-release site for sharing data mappings that translate between data formats, data models and/or vocabularies.  </p>
       <ul class="nav nav-tabs" id="tableTabs">
         <li class="active"><a href="#elements">Elements</a></li>
         <li><a href="#mappings">Mappings</a></li>
@@ -81,21 +81,21 @@
     <div class="row">
       <div class="col-md-4">
         <h2>Elements</h2>
-        <p>The Elements repository contains descriptions of source, target and/or intermediate data elements used by mappings or translations.
+        <p>The <a href="http://www.github.com/mappinghub/elements">Elements</a> repository contains descriptions of source, target and/or intermediate data elements used by the mappings.
           <br>
         </p>
         <p><a class="btn btn-default" href="https://www.github.com/mappinghub/elements" role="button">Visit Repo »</a></p>
       </div>
       <div class="col-md-4">
         <h2>Mappings</h2>
-        <p>The Mappings repository contains descriptions of mappings (a/k/a translations) that are used to convert source data formats, data models and/or vocabularies to target data formats, data models and/or vocabularies.
+        <p>The <a href="http://www.github.com/mappinghub/mappings">Mappings</a> repository contains descriptions of mappings (a/k/a translators) that are used to convert source data formats, data models and/or vocabularies to target data formats, data models and/or vocabularies.
           <br>
         </p>
         <p><a class="btn btn-default" href="http://www.github.com/mappinghub/mappings" role="button">Visit Repo »</a></p>
       </div>
       <div class="col-md-4">
         <h2>Views</h2>
-        <p>The Views repository contains definitions of various auto-generated views of mappings and elements.
+        <p>The <a href="https://github.com/mappinghub/mappings">Views</a> repository contains definitions of various auto-generated views of mappings and elements, enabling them to be organized and displayed in different ways.  
           <br>
         </p>
         <p><a class="btn btn-default" href="https://www.github.com/mappinghub/views" role="button">Visit Repo »</a></p>
