Changed copyright notice and referenced Yosemite Project

--- a/site/index.html
+++ b/site/index.html
@@ -62,7 +62,7 @@
         <a href="http://github.com/mappinghub/views/"><img src="https://travis-ci.org/mappinghub/views.svg?branch=master"></img></a>
         <h1>Mapping Hub</h1>
       </div>
-      <p>This is an experimental pre-release site for sharing data mappings that translate between data formats, data models and/or vocabularies.  </p>
+      <p>This is an experimental pre-release site for sharing data mappings that translate between data formats, data models and/or vocabularies.  It is based on the <a href="http://yosemiteproject.org/">Yosemite Project</a> vision for improving healthcare data interoperability.</p>
       <ul class="nav nav-tabs" id="tableTabs">
         <li class="active"><a href="#elements">Elements</a></li>
         <li><a href="#mappings">Mappings</a></li>
@@ -103,7 +103,7 @@
     </div>
     <hr>
     <footer>
-      <p>© MappingHub.org 2017 - build $BUILDNUMBER</p>
+      <p>© 2017 - build $BUILDNUMBER</p>
     </footer>
   </div>
   <!-- /container -->
