--- a/site/index.html
+++ b/site/index.html
@@ -47,8 +47,8 @@
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="/">Home</a></li>
-          <li><a href="https://github.com/mappinghub/elements">Elements</a></li>
           <li><a href="https://github.com/mappinghub/mappings">Mappings</a></li>
+          <li><a href="https://github.com/mappinghub/elements">Elements</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
@@ -64,15 +64,15 @@
       </div>
       <p>This is an experimental pre-release site for sharing data mappings that translate between data formats, data models and/or vocabularies.  It is based on the <a href="http://yosemiteproject.org/">Yosemite Project</a> vision for improving healthcare data interoperability.</p>
       <ul class="nav nav-tabs" id="tableTabs">
-        <li class="active"><a href="#elements">Elements</a></li>
-        <li><a href="#mappings">Mappings</a></li>
+        <li class="active"><a href="#mappings">Mappings</a></li>
+        <li><a href="#elements">Elements</a></li>
       </ul>
       <div class="tab-content">
-        <div class="tab-pane active" id="elements">
-          <table role="grid" class="table table-striped table-bordered dataTable no-footer" id="elements-table"></table>
-        </div>
-        <div class="tab-pane" id="mappings">
+        <div class="tab-pane active" id="mappings">
           <table role="grid" class="table table-striped table-bordered dataTable no-footer" id="mappings-table"></table>
+        </div>
+        <div class="tab-pane" id="elements">
+          <table role="grid" class="table table-striped table-bordered dataTable no-footer" id="elements-table"></table>
         </div>
       </div>
     </div>
